--- a/login.css
+++ b/login.css
@@ -141,7 +141,18 @@ input[type="submit"] {
 input[type="submit"]:hover {
   background-color: #6b3d1d;
 }
-
+ .floating-btn {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #85572d;
+            padding: 12px 24px;
+            color: #ffffff;
+            font-size: 14px;
+            margin: 0px auto;
+            border: none;
+            border-radius: 20px;
+        }
 .footer {
   position: fixed;
   bottom: 0;
